--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -3,26 +3,29 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.swc_pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>16:30</td>  <td>Workshop overview and introductions</td> </tr>
+      <tr> <td>16:45</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/01-rstudio-intro/index.html">Introduction to R and RStudio</a>, <a href="https://swcarpentry.github.io/r-novice-gapminder/02-project-intro/index.html">project management</a>, <a href="https://swcarpentry.github.io/r-novice-gapminder/03-seeking-help/index.html">seeking help</a></td> </tr>
+      <tr> <td>17:45</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/04-data-structures-part1/index.html">Data structures</a></td> </tr>
+      <tr> <td>18:30</td>  <td>Pizza dinner</td> </tr>
+      <tr> <td>19:30</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/05-data-structures-part2/index.html">Exploring dataframes</a>, <a href="https://swcarpentry.github.io/r-novice-gapminder/11-writing-data/index.html">writing data</a></td> </tr>
+      <tr> <td>20:30</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing Data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>08:30</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2/index.html">Creating publication-quality graphics</a></td> </tr>
+      <tr> <td>09:30</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/07-control-flow/index.html">Control flow</a></td> </tr>
+      <tr> <td>10:15</td>  <td>Coffee / tea break</td> </tr>
+      <tr> <td>10:30</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/10-functions/index.html">Functions explained</a></td> </tr>
+      <tr> <td>11:30</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/13-dplyr/">Dataframe manipulation with dplyr</a> and <a href="https://swcarpentry.github.io/r-novice-gapminder/14-tidyr/">tidyr</a></td> </tr>
+      <tr> <td>13:00</td>  <td>Lunch break</td> </tr>
+      <tr> <td>14:00</td>  <td><a href="https://swcarpentry.github.io/git-novice/01-basics/index.html">Automated version control</a>, <a href="https://swcarpentry.github.io/git-novice/02-setup/index.html">setting up git</a>, <a href="https://swcarpentry.github.io/git-novice/03-create/index.html">creating a repository</a>, <a href="https://swcarpentry.github.io/git-novice/04-changes/index.html">tracking changes</a></td> </tr>
+      <tr> <td>14:40</td>  <td><a href="https://swcarpentry.github.io/git-novice/05-history/index.html">Exploring history</a>, <a href="https://swcarpentry.github.io/git-novice/06-ignore/index.html">ignoring things</a></td> </tr>
+      <tr> <td>15:15</td>  <td>Coffee / tea break</td> </tr>
+      <tr> <td>15:30</td>  <td><a href="https://swcarpentry.github.io/git-novice/07-github/index.html">Remotes in GitHub</a>, <a href="https://swcarpentry.github.io/git-novice/08-collab/index.html">collaborating</a>, <a href="https://swcarpentry.github.io/git-novice/09-conflict/index.html">conflicts</a></td> </tr>
+      <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
     </table>
   </div>
 </div>
