--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -4,7 +4,7 @@
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.swc_pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
       <tr> <td>16:30</td>  <td>Workshop overview and introductions</td> </tr>
-      <tr> <td>16:45</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/01-rstudio-intro/index.html">Introduction to R and RStudio</a>, <a href="https://swcarpentry.github.io/r-novice-gapminder/02-project-intro/index.html">project management</a>, <a href="https://swcarpentry.github.io/r-novice-gapminder/03-seeking-help/index.html">seeking help</a></td> </tr>
+      <tr> <td>16:45</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/01-rstudio-intro/index.html">Introduction to R and RStudio</a>, <a href="https://swcarpentry.github.io/r-novice-gapminder/02-project-intro/index.html">project management</a>, <a href="https://swcarpentry.github.io/r-novice-gapminder/03-seeking-help/index.html">seeking help</a>, <a href="https://swcarpentry.github.io/r-novice-gapminder/15-knitr-markdown/">producing reports with knitr</a></td> </tr>
       <tr> <td>17:45</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/04-data-structures-part1/index.html">Data structures</a></td> </tr>
       <tr> <td>18:30</td>  <td>Pizza dinner</td> </tr>
       <tr> <td>19:30</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/05-data-structures-part2/index.html">Exploring dataframes</a>, <a href="https://swcarpentry.github.io/r-novice-gapminder/11-writing-data/index.html">writing data</a></td> </tr>
